# local-test

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  code-review-checklist.md  prototype.py  pyproject.toml  toolcli-enhancements.md
.beads/: issues.jsonl
.github/: copilot-instructions.md  copilot-settings.json
.github/workflows/: copilot-setup-steps.yml
tests/: test_cli_smoke.py  test_config.py  test_currency_tool.py  test_news_tool.py  test_ollama_client.py  test_orchestrator.py  test_registry.py  test_time_tool.py  test_weather_tool.py
toolcli/: __init__.py  __main__.py  cli.py  config.py  main.py  ollama.py  ollama_client.py  orchestrator.py  schemas.py  tool_registry.py  ui.py
toolcli/providers/: __init__.py  currency.py  news.py  weather.py
toolcli/tools/: __init__.py  currency.py  news.py  time_tool.py  weather.py
